Razor Syntax and ViewModels

--- a/Vidly/Views/Movies/Random.cshtml
+++ b/Vidly/Views/Movies/Random.cshtml
@@ -1,8 +1,25 @@
-﻿@model Vidly.Models.Movie
+﻿@model Vidly.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@{
+    var classname = Model.Customers.Count > 2 ? "popular" : null;
+}
+<h2 class="@classname">@Model.Movie.Name</h2>
 
-<h2>@ViewData["Movie"]</h2>
+@if (Model.Customers.Count == 0)
+{
+    <text>No one has rented this Movie before</text>
+}
+else
+{
+    
 
+    <ul>
+        @foreach (var customer in Model.Customers)
+        {
+            <li>@customer.Name</li>
+        }
+    </ul>
+}
