--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -1,11 +1,11 @@
-﻿@model Vidly.ViewModels.NewCustomerViewModel
+﻿@model Vidly.ViewModels.CustomerFormViewModel
 @{
     ViewBag.Title = "New";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>New Customer</h2>
-@using (Html.BeginForm("Create", "Customers"))
+@using (Html.BeginForm("Save", "Customers"))
 {
     <div class="form-group">
         @Html.LabelFor(m=>m.Customer.Name)
@@ -13,15 +13,16 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m=>m.Customer.Birthdate)
-        @Html.TextBoxFor(m=>m.Customer.Birthdate, new{@class="form-control"})
-    </div>
-    <div class="checkbox">
-        @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter, new {@class = "checkbox"}) Subscribed to the Newsletter?
+        @Html.TextBoxFor(m=>m.Customer.Birthdate,"{0:d MMM yyyy}", new{@class="form-control"})
     </div>
     <div class="form-group">
         @Html.LabelFor(m=>m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m=>m.Customer.MembershipTypeId,new SelectList(Model.MembershipTypes, "Id", "Name"),"Select Membership", new{@class="form-control"})
     </div>
-
+    <div class="checkbox">
+        @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter, new {@class = "checkbox"}) Subscribed to the Newsletter?
+    </div>
+    @Html.HiddenFor(m=>m.Customer.Id)
+    <button type="submit" class="btn btn-primary">Save</button>
 }
 
