--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -15,10 +15,12 @@
     <div class="form-group">
         @Html.LabelFor(m=>m.Customer.Birthdate)
         @Html.TextBoxFor(m=>m.Customer.Birthdate,"{0:d MMM yyyy}", new{@class="form-control"})
+        @Html.ValidationMessageFor(m=>m.Customer.Birthdate)
     </div>
     <div class="form-group">
         @Html.LabelFor(m=>m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m=>m.Customer.MembershipTypeId,new SelectList(Model.MembershipTypes, "Id", "Name"),"Select Membership", new{@class="form-control"})
+        @Html.ValidationMessageFor(m=>m.Customer.MembershipTypeId)
     </div>
     <div class="checkbox">
         @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter, new {@class = "checkbox"}) Subscribed to the Newsletter?
