--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -7,25 +7,32 @@
 <h2>New Customer</h2>
 @using (Html.BeginForm("Save", "Customers"))
 {
+    //Exclude Property errors, and error message
+    @Html.ValidationSummary(true, "Please fix the following errors.", new{@class= "field-validation-error" })
     <div class="form-group">
         @Html.LabelFor(m=>m.Customer.Name)
         @Html.TextBoxFor(m=>m.Customer.Name, new{@class="form-control"})
         @Html.ValidationMessageFor(m=>m.Customer.Name)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m=>m.Customer.Birthdate)
-        @Html.TextBoxFor(m=>m.Customer.Birthdate,"{0:d MMM yyyy}", new{@class="form-control"})
-        @Html.ValidationMessageFor(m=>m.Customer.Birthdate)
-    </div>
-    <div class="form-group">
         @Html.LabelFor(m=>m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m=>m.Customer.MembershipTypeId,new SelectList(Model.MembershipTypes, "Id", "Name"),"Select Membership", new{@class="form-control"})
         @Html.ValidationMessageFor(m=>m.Customer.MembershipTypeId)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m=>m.Customer.Birthdate)
+        @Html.TextBoxFor(m=>m.Customer.Birthdate,"{0:d MMM yyyy}", new{@class="form-control"})
+        @Html.ValidationMessageFor(m=>m.Customer.Birthdate)
     </div>
     <div class="checkbox">
         @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter, new {@class = "checkbox"}) Subscribed to the Newsletter?
     </div>
     @Html.HiddenFor(m=>m.Customer.Id)
+
     <button type="submit" class="btn btn-primary">Save</button>
+}
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
 
