--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -28,7 +28,7 @@
         @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter, new {@class = "checkbox"}) Subscribed to the Newsletter?
     </div>
     @Html.HiddenFor(m=>m.Customer.Id)
-
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
 @section scripts
