Return MembershipType in Datatable

--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -52,7 +52,7 @@
                     },
                     {
                         //data shows the DataTable plugin where to get the data from 
-                        data:"name"
+                        data:"membershipType.name"
                     },
                     {
                         data: "id",
