--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -21,63 +21,58 @@
     the code.*@
 <table id="customers" class="table table-bordered table-hover">
     <thead>
-    <tr>
-        <th>Customer</th>
-        <th>Membership Type</th>
-        <th>Delete</th>
-    </tr>
+        <tr>
+            <th>Customer</th>
+            <th>Membership Type</th>
+            <th>Delete</th>
+        </tr>
     </thead>
-    <tbody>
-    </tbody>
+    <tbody></tbody>
 </table>
 
-@section scripts{
+@section scripts
+{
     <script>
-        //Makes sure the page is ready for DOM manipulation
         $(document).ready(function () {
             $("#customers").DataTable({
                 ajax: {
                     url: "/api/customers",
-                    //Because our Api response is an array of objects that represent the customer's information
-                    //If the Api response was containing an array of customers as a property, then we would have
-                    //to send it to that array, by giving the dataSrc attribute the string 
-                    dataSrc:""
+                    dataSrc: ""
                 },
                 columns: [
                     {
                         data: "name",
-                        render: function(data, type, customer) {
-                            return "<a href='/customers/edit" + customer.id + "'>" + customer.name + "</a>";
+                        render: function (data, type, customer) {
+                            return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
                         }
                     },
                     {
-                        //data shows the DataTable plugin where to get the data from 
-                        data:"membershipType.name"
+                        data: "membershipType.name"
                     },
                     {
                         data: "id",
-                        //renders each row in the table
-                        render: function(data) {
+                        render: function (data) {
                             return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
                         }
                     }
                 ]
             });
 
+
             $("#customers").on("click", ".js-delete", function () {
                 var button = $(this);
-                bootbox.confirm("Are you sure you want to delete this customer?",
-                    function() {
-                        if (result) {
-                            $.ajax({
-                                url: "/api/customers/" + button.attr("data-customer-id"),
-                                method: "DELETE",
-                                success: function() {
-                                    button.parents("tr").remove();
-                                }
-                            });
-                        }
-                    });
+
+                bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/customers/" + button.attr("data-customer-id"),
+                            method: "DELETE",
+                            success: function () {
+                                button.parents("tr").remove();
+                            }
+                        });
+                    }
+                });
             });
         });
     </script>
