--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -10,7 +10,7 @@
 <form action="">
     <div class="form-group">
         <label>Customer</label>
-        <input type="text" class="form-control"/>
+        <input id="customer" type="text" class="form-control"/>
     </div>
     <div class="form-group">
         <label>Movie</label>
@@ -20,3 +20,27 @@
     <button class="btn btn-primary">Submit</button>
 
 </form>
+@section scripts
+{
+    <script>
+        $(document).ready(function() {
+            var customers = new Bloodhound({
+                datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
+                queryTokenizer: Bloodhound.tokenizers.whitespace,
+                remote: {
+                    url: '/api/customers?query=%QUERY',
+                    wildcard: '%QUERY'
+                }
+            });
+
+            $('#customer').typeahead({
+                minLength: 3,
+                highlight:true
+            }, {
+                name: 'customers',
+                display: 'name',
+                source: customers
+            });
+        });
+    </script>
+}
