--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -14,8 +14,10 @@
     </div>
     <div class="form-group">
         <label>Movie</label>
-        <input type="text" value="" class="form-control"/>
+        <input id="movie" type="text" value="" class="form-control"/>
     </div>
+    
+    <ul id="movies" class="list-group"></ul>
     
     <button class="btn btn-primary">Submit</button>
 
@@ -25,7 +27,9 @@
     <script>
         $(document).ready(function () {
             //stands for viewmodel, to save the customers selected
-            var vm = {};
+            var vm = {
+                movieIds:[]
+            };
 
             var customers = new Bloodhound({
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
@@ -43,9 +47,33 @@
                 name: 'customers',
                 display: 'name',
                 source: customers
+                });
+
+            var movies = new Bloodhound({
+                datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
+                queryTokenizer: Bloodhound.tokenizers.whitespace,
+                remote: {
+                    url: '/api/movies?query=%QUERY',
+                    wildcard: '%QUERY'
+                }
             });
-        }).on("typeahead:select", function(e, customer) {
-            vm.customerId = customer.id;
+
+            $('#movie').typeahead({
+                minLength: 3,
+                highlight:true
+            }, {
+                name: 'movies',
+                display: 'name',
+                source: movies
+            });
+
+        }).on("typeahead:select", function (e, movie) {
+            //modifies Dom elements directly
+            $("#movies").append("<li>" + movie.name + "</li>");
+
+            $("#movie").typeahead("val", "");
+
+            vm.movieIds.push(movie.id);
         });
     </script>
 }
