--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -10,11 +10,15 @@
 <form action="">
     <div class="form-group">
         <label>Customer</label>
-        <input id="customer" type="text" class="form-control"/>
+        <div class="tt-container">
+            <input id="customer" type="text" class="form-control"/>
+        </div>
     </div>
     <div class="form-group">
         <label>Movie</label>
-        <input id="movie" type="text" value="" class="form-control"/>
+        <div class="tt-container">
+            <input id="movie" type="text" value="" class="form-control"/>
+        </div>
     </div>
     
     <ul id="movies" class="list-group"></ul>
