Filter records for both movies and customer, when autocompleting so that only the relevant results show.

--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -21,7 +21,12 @@
         </div>
     </div>
     
-    <ul id="movies" class="list-group"></ul>
+    <div class="row">
+        <div class="col-md-4 col-sm-4">
+            <ul id="movies" class="list-group"></ul>
+        </div>
+    </div>
+
     
     <button class="btn btn-primary">Submit</button>
 
