Add Ajax call to Api to NewRentalController. Add Toastr notification for success and failure of call.

--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -6,38 +6,36 @@
 
 <h2>New Rental Form</h2>
 
-
-<form action="">
+<form id="newRental">
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
-            <input id="customer" type="text" class="form-control"/>
+            <input id="customer" type="text" value="" class="form-control" />
         </div>
     </div>
+
     <div class="form-group">
         <label>Movie</label>
         <div class="tt-container">
-            <input id="movie" type="text" value="" class="form-control"/>
+            <input id="movie" type="text" value="" class="form-control" />
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-md-4 col-sm-4">
             <ul id="movies" class="list-group"></ul>
         </div>
     </div>
 
-    
     <button class="btn btn-primary">Submit</button>
-
 </form>
 @section scripts
 {
     <script>
         $(document).ready(function () {
-            //stands for viewmodel, to save the customers selected
+
             var vm = {
-                movieIds:[]
+                movieIds: []
             };
 
             var customers = new Bloodhound({
@@ -51,11 +49,13 @@
 
             $('#customer').typeahead({
                 minLength: 3,
-                highlight:true
+                highlight: true
             }, {
-                name: 'customers',
-                display: 'name',
-                source: customers
+                    name: 'customers',
+                    display: 'name',
+                    source: customers
+                }).on("typeahead:select", function (e, customer) {
+                    vm.customerId = customer.id;
                 });
 
             var movies = new Bloodhound({
@@ -69,20 +69,34 @@
 
             $('#movie').typeahead({
                 minLength: 3,
-                highlight:true
+                highlight: true
             }, {
-                name: 'movies',
-                display: 'name',
-                source: movies
+                    name: 'movies',
+                    display: 'name',
+                    source: movies
+                }).on("typeahead:select", function (e, movie) {
+                    $("#movies").append("<li class='list-group-item'>" + movie.name + "</li>");
+
+                    $("#movie").typeahead("val", "");
+
+                    vm.movieIds.push(movie.id);
+                });
+
+            $("#newRental").submit(function (e) {
+                e.preventDefault();
+
+                $.ajax({
+                    url: "/api/newRentals",
+                    method: "post",
+                    data: vm
+                })
+                    .done(function () {
+                        toastr.success("Rentals successfully recorded.");
+                    })
+                    .fail(function () {
+                        toastr.error("Something unexpected happened");
+                    });
             });
-
-        }).on("typeahead:select", function (e, movie) {
-            //modifies Dom elements directly
-            $("#movies").append("<li class='list-group-item'>" + movie.name + "</li>");
-
-            $("#movie").typeahead("val", "");
-
-            vm.movieIds.push(movie.id);
         });
     </script>
 }
